--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,13 @@
 Package: PPtree
-Version: 2.2.0
-Date: 2013-05-01
+Version: 2.3.0
+Date: 2014-05-08
 Title: Projection pursuit classification tree
 Author: Eun-Kyung Lee, Yoondong Lee
 Maintainer: Eun-Kyung Lee <lee.eunk@gmail.com>
-Depends: MASS, penalizedLDA
-Description: Projection pursuit classification tree using LDA, Lr or
-        PDA projection pursuit index
+Imports: MASS (>= 3.1-20), penalizedLDA (>= 1.0)
+Description: Projection pursuit classification tree using LDA, Lr or PDA projection pursuit index
 License: LGPL-2.1
-Packaged: 2013-04-30 15:18:59 UTC; user
+Packaged: 2014-05-08 07:05:19 UTC; EKLee
 NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2013-05-02 09:02:20
+Date/Publication: 2014-05-08 10:34:32
